# examples

./: .gitignore  ANCHOR_VERSION  README.md  SOLANA_VERSION
auto_claim/programs/auto_claim/: Cargo.toml
auto_claim/programs/auto_claim/src/: lib.rs
auto_claim/programs/auto_claim/src/instructions/: auto_claim.rs  create.rs  mod.rs
auto_claim/programs/auto_claim/src/state/: claim.rs  mod.rs
dca/client/: Cargo.toml
dca/client/src/: main.rs  utils.rs
dca/programs/dca/: Cargo.toml
dca/programs/dca/src/: id.rs  lib.rs
dca/programs/dca/src/instructions/: auto_swap.rs  create_fund.rs  create_orders.rs  create_queue.rs  create_task.rs  delegate_funds.rs  deposit.rs  fund_ata.rs  init_oo_account.rs  init_open_order_account.rs  init_order.rs  init_orders_acct.rs  initialize.rs  mod.rs  swap.rs
dca/programs/dca/src/state/: authority.rs  fund.rs  mod.rs  order.rs
distributor/client/: Cargo.toml
distributor/client/src/: main.rs
distributor/programs/distributor/: Cargo.toml
distributor/programs/distributor/src/: id.rs  lib.rs
distributor/programs/distributor/src/instructions/: create.rs  distribute.rs  initialize.rs  mint_token.rs  mod.rs  set_recipient.rs  update.rs
distributor/programs/distributor/src/state/: distributor.rs  mod.rs
event_stream/client/: Cargo.toml
event_stream/client/src/: main.rs
event_stream/programs/event_stream/: Cargo.toml
event_stream/programs/event_stream/src/: id.rs  lib.rs
event_stream/programs/event_stream/src/instructions/: initialize.rs  mod.rs  ping.rs  process_event.rs
event_stream/programs/event_stream/src/state/: event.rs  mod.rs
hello_clockwork/client/: Cargo.toml
hello_clockwork/client/src/: explorer.rs  main.rs
hello_clockwork/programs/hello_clockwork/: Cargo.toml
hello_clockwork/programs/hello_clockwork/src/: id.rs  lib.rs
hello_clockwork/programs/hello_clockwork/src/instructions/: create_queue.rs  create_task.rs  hello_world.rs  initialize.rs  mod.rs
hello_cronos/client/: Cargo.toml
hello_cronos/programs/hello_cronos/: Cargo.toml
hello_cronos/programs/hello_cronos/src/: id.rs  lib.rs
hello_cronos/programs/hello_cronos/src/instructions/: hello_world.rs  initialize.rs  mod.rs
hello_cronos/programs/hello_cronos/src/state/: mod.rs
investments/: Anchor.toml  Cargo.toml  README.md
investments/client/: Cargo.toml
investments/client/src/: main.rs  utils.rs
investments/clients/investments/: Cargo.toml
investments/clients/investments/src/: main.rs  utils.rs
investments/clients/serum_crank/: Cargo.toml
investments/clients/serum_crank/src/: main.rs
investments/programs/investments/: Cargo.toml
investments/programs/investments/src/: id.rs  lib.rs
investments/programs/investments/src/instructions/: claim.rs  create_investment.rs  create_orders.rs  deposit.rs  investment_create.rs  investment_delete.rs  investment_update.rs  mod.rs  settle_funds.rs  swap.rs  update_investment.rs  withdraw.rs
investments/programs/investments/src/state/: investment.rs  mod.rs
investments/programs/serum_crank/: Cargo.toml
investments/programs/serum_crank/src/: id.rs  lib.rs
investments/programs/serum_crank/src/instructions/: consume_events.rs  crank_events.rs  initialize.rs  mod.rs  read_events.rs
investments/programs/serum_crank/src/state/: crank.rs  mod.rs
investments/tests/: investments.ts
lookup_tables/rust-client/: Cargo.toml
lookup_tables/rust-client/src/: client.rs  main.rs
openbook_arb/client/: Cargo.toml
openbook_arb/client/src/: main.rs
openbook_crank/client/: Cargo.toml
openbook_crank/client/src/: main.rs  utils.rs
openbook_dca/client/: Cargo.toml
openbook_dca/client/src/: main.rs  utils.rs
orca_dca/client/: Cargo.toml
orca_dca/client/src/: main.rs  utils.rs
payments/: .gitignore  .prettierignore  Anchor.toml  Cargo.toml  README.md  package.json
payments/client/: Cargo.toml
payments/client/src/: main.rs
payments/programs/payments/: Cargo.toml
payments/programs/payments/src/: id.rs  lib.rs
payments/programs/payments/src/instructions/: create_payment.rs  disburse_payment.rs  mod.rs  top_up_payment.rs  update_payment.rs
payments/programs/payments/src/state/: mod.rs  payment.rs
payments/tests/: payments.ts  token_transfer.ts
pyth_feed/: Anchor.toml  Cargo.toml  README.md  deploy.sh
pyth_feed/client/: Cargo.toml
pyth_feed/client/src/: main.rs
pyth_feed/programs/pyth_feed/: Cargo.toml
pyth_feed/programs/pyth_feed/src/: id.rs  lib.rs
pyth_feed/programs/pyth_feed/src/instructions/: create_feed.rs  mod.rs  process_feed.rs  process_pyth_feed.rs
pyth_feed/programs/pyth_feed/src/state/: feed.rs  mod.rs
pyth_feed/tests/: pyth_feed.ts
serum_crank/client/: Cargo.toml
serum_crank/client/src/: main.rs  utils.rs
subscriptions/: .env  .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md
subscriptions/client/: Cargo.toml
subscriptions/client/src/: main.rs  utils.rs
subscriptions/client/src/commands/: create_mint.rs  create_subscriber.rs  create_subscription.rs  deactivate_subscription.rs  mod.rs  subscribe.rs  unsubscribe.rs  update_authority.rs  withdraw.rs
subscriptions/client/src/instructions/: create_queue.rs  create_subscriber.rs  create_subscription.rs  deposit.rs  mod.rs  subscribe.rs  unsubsribe.rs  withdraw.rs
subscriptions/programs/subscriptions/: Cargo.toml
subscriptions/programs/subscriptions/src/: error.rs  id.rs  lib.rs
subscriptions/programs/subscriptions/src/contexts/: create_queue.rs  create_subscriber.rs  create_subscription.rs  deactivate_subscription.rs  deposit.rs  disburse_payment.rs  mod.rs  subscribe.rs  thread_triggered.rs  unsubscribe.rs  (+2 more)
subscriptions/tests/: subscriptions.ts
swap/: Anchor.toml  Cargo.toml
swap/client/: Cargo.toml
swap/client/src/: main.rs  utils.rs
swap/crates/whirlpool/: Cargo.toml
swap/crates/whirlpool/src/: utils.rs
swap/programs/swap/: Cargo.toml  expanded.txt
swap/programs/swap/src/: id.rs  lib.rs
swap/tests/: swap.ts
token_transfer/client/: Cargo.toml
token_transfer/client/src/: main.rs
token_transfer/invoke/: Cargo.toml
token_transfer/invoke/src/: main.rs
(+269 files in other folders)
