[workspace]
members = [
   "client",
   "programs/*",
]

[patch.crates-io]
anchor-lang = { git = "https://github.com/clockwork-xyz/anchor", branch = "0.25.0-solana.1.13.4" }
anchor-spl = { git = "https://github.com/clockwork-xyz/anchor", branch = "0.25.0-solana.1.13.4" }
clockwork-sdk = { git = "https://github.com/clockwork-xyz/clockwork", tag = "v1.3.9" }
