[workspace]
members = [
    "client",
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
clockwork-sdk = { git = "https://github.com/clockwork-xyz/clockwork", tag = "v1.3.1" }
