[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
dca = { path = "../programs/dca", features = ["no-entrypoint"], version = "0.1.0" }
clockwork-scheduler = { version = "1.0.1", features = ["cpi"] }
anchor-spl = { version = "0.25.0", features = ["dex", "devnet"] }
anchor-lang = "0.25.0"
solana-sdk = "1.10.29"
solana-client = "1.10.29"
solana-client-helpers = "1.1.0"
serum-common = { version = "0.4.7", features = ["client"] }