[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = { version = "0.25.0", features = ["dex"] }
clockwork-sdk = { version = "1.3.1", features = ["client"] }
distributor = { path = "../programs/distributor", features = ["no-entrypoint"], version = "0.1.0" }
solana-sdk = "1.10.34"

[features]
devnet = []