[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features = ["dex"] }
clockwork-client = { version = "1.4.2" }
clockwork-utils = { version = "1.4.2" }
distributor = { path = "../programs/distributor", features = ["no-entrypoint"], version = "0.1.0" }
solana-cli-config = "1.10.4"
solana-sdk = "*"

[features]
localnet = []
