[package]
name = "event_stream_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.25.0"
clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", features = ["client"], version = "1.0.6" }
event_stream = { path = "../programs/event_stream", features = ["no-entrypoint"], version = "0.1.0" }
solana-sdk = "1.10.29"

[features]
devnet = []
