[package]
name = "event_stream_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.25.0"
clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.2.14", features = ["client"] }
event_stream = { path = "../programs/event_stream", features = ["no-entrypoint"], version = "0.1.0" }
solana-sdk = "1.10.29"

[features]
devnet = []
