[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
hello-clockwork = { path = "../programs/hello_clockwork", features = ["no-entrypoint"], version = "0.1.0" }
clockwork-sdk = { version = "1.3.8", features = ["client"] }
anchor-lang = "0.25.0"
solana-sdk = "1.10.34"

[features]
devnet = []