[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
hello-clockwork = { path = "../programs/hello_clockwork", features = ["no-entrypoint"], version = "0.1.0" }
clockwork-client = { version = "1.4.0" }
clockwork-utils = { version = "1.4.0" }
anchor-lang = "0.26.0"
solana-cli-config = "1.10.4"
solana-sdk = "1.13.5"

[features]
localnet = []
