[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
hello-cronos = { path = "../programs/hello_cronos", features = ["no-entrypoint"], version = "0.1.0" }
cronos-scheduler = { version = "0.2.0", features = ["cpi"] }
anchor-lang = "0.24.2"
solana-client-helpers = "1.1.0"
solana-sdk = "1.9.28"
