[package]
name = "client"
version = "0.1.0"
edition = "2021"


[dependencies]
anchor-lang = "=0.27.0"
anyhow = "1.0.71"
bincode = "1.3.3"
base64 = "0.13.0"
chrono = "0.4.24"
clockwork-thread-program = { path = "../../../clockwork/programs/thread" }
clockwork-utils = "=2.0.17"
reqwest = "0.11.11"
serde_json = "1.0.82"
solana-address-lookup-table-program = "=1.14.16"
solana-client = "=1.14.16"
solana-cli-config = "=1.14.16"
solana-sdk = "=1.14.16"
solana-transaction-status = "=1.14.16"
thiserror = "1.0.40"

[features]
localnet = []
