[package]
name = "dca-client"
version = "0.1.0"
edition = "2021"

[dependencies]
openbook-dca = { path = "../programs/openbook_dca", features = ["no-entrypoint"], version = "0.1.0" }
clockwork-client = "1.4.2"
anchor-spl = { version = "0.26.0", features = ["dex"] }
anchor-lang = "0.26.0"
solana-sdk = "1.14.12"
solana-cli-config = "1.14.12"