[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
payments = { path = "../programs/payments", features = ["no-entrypoint"], version = "0.1.0" }
clockwork-sdk = { version = "1.3.8", features = ["client"] }
anchor-spl = "0.25.0"
anchor-lang = "0.25.0"
solana-sdk = "1.10.34"
solana-client = "1.10.34"