[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features = ["dex"] }
clockwork-client = {git="https://github.com/clockwork-xyz/clockwork.git", rev="512677377e64cbf207ea0b1041147dfa2db00362"}
clockwork-utils = {git="https://github.com/clockwork-xyz/clockwork.git", rev="512677377e64cbf207ea0b1041147dfa2db00362"}
clockwork-thread-program = {git="https://github.com/clockwork-xyz/clockwork.git", rev="512677377e64cbf207ea0b1041147dfa2db00362"}
payments = { path = "../programs/payments", features = ["no-entrypoint"], version = "0.1.0" }

solana-cli-config = "1.10.4"
solana-sdk = "1.14.13"
