[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.25.0"
clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.2.13", features = ["client"] }
pyth_feed = { path = "../programs/pyth_feed", features = ["no-entrypoint"], version = "0.1.0" }
solana-sdk = "1.10.34"