[package]
name = "client"
version = "0.1.0"
edition = "2021"


[dependencies]
anchor-lang = "0.25.0"
clockwork-sdk = { version = "1.3.1", features = ["client"] }
pyth_feed = { path = "../programs/pyth_feed", features = ["no-entrypoint"], version = "0.1.0" }
solana-sdk = "1.10.34"

[features]
localnet = []
