[package]
name = "serum-crank-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serum-crank = { path = "../programs/serum_crank", features = ["no-entrypoint"], version = "0.1.0" }
clockwork-crank = "1.0.5"
anchor-spl = { version = "0.25.0", features = ["dex"] }
anchor-lang = "0.25.0"
solana-sdk = "1.10.29"
solana-client = "1.10.29"
solana-client-helpers = "1.1.0"
serum-common = { version = "0.4.7", features = ["client"] }

[features]
devnet = []