[package]
name = "serum-crank-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serum-crank = { path = "../programs/serum_crank", features = ["no-entrypoint"], version = "0.1.0" }
clockwork-sdk = { version = "1.3.8", features = ["client"] }
anchor-spl = { version = "0.25.0", features = ["dex"] }
anchor-lang = "0.25.0"
solana-sdk = "1.13.4"
solana-client = "1.13.4"

[features]
devnet = []