[package]
name = "client-subscriptions-program"
version = "0.1.0"
edition = "2021"

[dependencies]
subscriptions-program = { path = "../programs/subscriptions", features = ["no-entrypoint"], version = "0.1.0" }
clap = { version = "4.0.28", features = ["derive"] }
clockwork-sdk = { version = "1.3.9", features = ["client"] }
clockwork-crank = "1.0.5"
anchor-spl = "0.25.0"
anchor-lang = "0.25.0"
solana-sdk = "1.10.34"
solana-client = "1.10.34"
dotenv = "0.15.0"
serde_json = "1.0.89"
serde = "1.0.147"
rand = "0.8.5"
bs58 = "0.4.0"

[features]
devnet = []
