[package]
name = "stateless-swap-client"
version = "0.1.0"
edition = "2021"

[features]
delete = []

[dependencies]
swap = { path = "../programs/swap", features = ["no-entrypoint"], version = "0.1.0" }
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-sdk = "1.14.12"
solana-cli-config = "1.14.12"
spl-associated-token-account = "1.1.2"
clockwork-client = "1.4.2"
whirlpool = { path = "../crates/whirlpool" }
bytemuck = "1.13.0"