[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
token-transfer = { path = "../programs/token_transfer", features = ["no-entrypoint"], version = "0.1.0" }
cronos-scheduler = { version = "0.2.0", features = ["cpi"] }
anchor-spl = "0.24.2"
anchor-lang = "0.24.2"
solana-sdk = "~1.9.13"
solana-client = "~1.9.13"
solana-client-helpers = "1.1.0"