[package]
name = "auto_claim"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auto_claim"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
clockwork-sdk = { path = "../../../../clockwork/sdk", version = "1.1.4" }
streamflow-sdk = {version = "0.5.2", features = ["cpi"]}
# clockwork-sdk = { branch = "main", git = "https://github.com/clockwork-xyz/clockwork", version = "1.1.4" }