[package]
name = "event_stream"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "event_stream"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"]}
clockwork-sdk = { version = "2.0.18" }

# needed to fix the could not compile spl-token-2022 issue
solana-program = "=1.14.16"
